chore: updated config yaml

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Kurian Kannath # the main title
 
-tagline: Software Engineer who is curious about how things work in software # it will display as the subtitle
+tagline: Coding Curiosity: Discover, Learn and Build # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   My personal blog where I like to document my understandings from working on personal projects
