--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://github.com/kuriankannath/Predict-Future-Sales/blob/master/Images/Pandas_Image.png
+avatar: https://github.com/kuriankannath/Predict-Future-Sales/blob/master/Images/Pandas_Image.png?raw=true
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
