chore: first post

--- a/_config.yml
+++ b/_config.yml
@@ -34,15 +34,14 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Kurian Kannath
+  email: kuriankannathraphy@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    # - https://twitter.com/username # change to your Twitter homepage
+    # - https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+     - https://www.linkedin.com/in/kuriankannath/
 
 # Site Verification Settings
 webmaster_verifications:
@@ -98,7 +97,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://github.com/kuriankannath/Predict-Future-Sales/blob/master/Images/Pandas_Image.png?raw=true
+avatar: https://github.com/kuriankannath/Predict-Future-Sales/blob/master/Images/Pandas_Image.png?raw=true ## https://stackoverflow.com/questions/17141612/images-in-github-pages-and-relative-links
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
